TFP-4475 litt rydding i tester (#2938)
* Gjøre test tydeligere
* Introduser utbetalingsgrad i test
* Skriv om overlappOMPSVPGradertPeriode-test
* Skriv om ingenOverlappOMPSVPGradertPeriode-test
* Skriv om overlappOmsorgspengerSVP-test
* Skriv om ingenOverlappOmsorgspengerSVP-test